src/objects/Event__c.object
<CustomObject>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <length>52768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Processing_End_Date_Time__c</fullName>
        <label>Processing End Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Processing_Start_Date_Time__c</fullName>
        <label>Processing Start Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Record_Type__c</fullName>
        <label>Record Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Independent_Ecommerce</fullName>
                    <label>Independent (ecommerce)</label>
                </value>
                <value>
                    <fullName>Independent_Bank_Transfer</fullName>
                    <label>Independent (bank transfer)</label>
                </value>
                <value>
                    <fullName>Enterprise_Parent</fullName>
                    <label>Enterprise Parent</label>
                </value>
                <value>
                    <fullName>Enterprise_Child</fullName>
                    <label>Enterprise Child</label>
                </value>
                <value>
                    <fullName>Third_Party</fullName>
                </value>
                <value>
                    <fullName>IndependentEcommerce</fullName>
                    <isActive>false</isActive>
                    <label>IndependentEcommerce</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Related_Record_Id__c</fullName>
        <description>Id of the record this Event is related with</description>
        <label>Related Record Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retry_Times__c</fullName>
        <label>Retry Times</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Validated</fullName>
                </value>
                <value>
                    <fullName>Processed</fullName>
                </value>
                <value>
                    <fullName>Processed with Errors</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CaseCreated</fullName>
                </value>
                <value>
                    <fullName>CustomerCreated</fullName>
                </value>
                <value>
                    <fullName>CustomerUpdated</fullName>
                </value>
                <value>
                    <fullName>DeviceRegistered</fullName>
                </value>
                <value>
                    <fullName>DeviceUnregistered</fullName>
                </value>
                <value>
                    <fullName>LeadCreated</fullName>
                </value>
                <value>
                    <fullName>OrderCreated</fullName>
                </value>
                <value>
                    <fullName>OrderUpdated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Event</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>